# luviio.in

./: .env.example  .gitignore  .txt  ARCHITECTURE_DIAGRAMS.md  AUTHENTICATION_PRODUCTION_GUIDE.md  AUTH_QUICK_REFERENCE.md  CHANGES_APPLIED.md  Dockerfile  FLOW_EXAMPLES.md  GOOGLE_OAUTH_SETUP_GUIDE.md  OAUTH_AT_A_GLANCE.md  OAUTH_COMPLETION_SUMMARY.md  OAUTH_FIX_SUMMARY.md  OAUTH_IMPLEMENTATION.md  OAUTH_IMPLEMENTATION_CHECKLIST.md  QUICK_START_VISUAL.md  README.md  README_AUTH_SYSTEM.md  README_OAUTH.md  SESSION_SECURITY_CONFIG.md  SETUP_CHECKLIST.md  URL_CONFIGURATION_COMPLETE.md  VERCEL_ENV_SETUP.md  confi.py  index.html  main.py  oauth-demo.html  package.json  requirements.txt  temp.html  vercel.json
api/: config.py  index.py  main.py  models.py
api/middleware/: cors_setup.py  domain_guard.py
api/routes/: admin.py  auth.py  database.py  home.py  resend_mail.py  routes.py  seed.py
api/services/: data_fetcher.py  supabase_client.py
api/static/: style.css
api/templates/: index.html
api/utils/: cookies.py  deps.py  error_handlers.py  oauth_client.py  oauth_diagnostics.py  security.py
app/: main.py
app/core/: config.py  security.py  supabase.py
app/db/: client.py  models.py
app/ecommerce/: transaction.py
app/middleware /: security.py
docs/: EDGE_FUNCTION_DEPLOYMENT.md  OAUTH_IMPLEMENTATION_SUMMARY.md  OAUTH_QUICKSTART.md  OAUTH_QUICK_REFERENCE.md  OAUTH_SETUP.md  README.md
routers/: .py  auth.py  email.py  onboarding.py
schemas/: auth.py
supabase/functions/oauth-callback/: main.py  pyproject.toml
templates/: base.html  login.html
(+102 files in other folders)
